rename india run 02 files and start us run 02

--- a/turk/run-us_02/settings.json
+++ b/turk/run-us_02/settings.json
@@ -8,7 +8,7 @@
     "auto_approval_delay":  "5 minutes",
     "reward":               0.55,
     "qualifications": {
-        "location": "IN",
+        "location": "US",
         "approval_percentage": 95
     }
 }
